# my_blog

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  pyproject.toml
blog/: settings.py  urls.py
categories/: admin.py  models.py
categories/migrations/: 0001_initial.py
comments/: admin.py  forms.py  models.py
comments/migrations/: 0001_initial.py
posts/: admin.py  models.py  services.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_post_image_text.py  0003_post_new_image_post_alter_post_image_text.py  0004_remove_post_new_image_post.py
posts/templates/posts/: index.html  post_category.html  post_details.html  post_search.html
staticfiles/: staticfiles.json
staticfiles/summernote/: summernote-bs4.min.180bf8662719.css  summernote-lite.min.060278c4d1c7.css  summernote.min.d1fed325e4d3.css
templates/: base.html
templates/partials/: _footer.html  _head.html  _nav.html
